contour/manifests/echoserver-ingress-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-protected
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-protected
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-protected
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20210922-cec7cf2
        ports:
        - name: http-api
          containerPort: 3000
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-protected
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-protected
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-protected
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
#  ingressClassName: nginx-example
  tls:
  - hosts:
    - protected.127-0-0-101.nip.io
    secretName: ingress
  rules:
  - host: protected.127-0-0-101.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver-protected
            port:
              number: 80
